# ftw-hub

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  pyproject.toml
events/: vienna-fta.yaml  vienna-judith.yaml  vienna-muwi.yaml  vienna-od.yaml  vienna-other.yaml  vienna-palindrone.yaml
src/ftw_hub/: __init__.py  utils.py
templates/: folktanz-at.html  monatsuebersicht.html  monatsuebersicht.txt
tests/: __init__.py
